# otus-task2

./: CMakeLists.txt
.github/workflows/: release.yaml
src/: CMakeLists.txt  filter.cpp  filter.h  ip.cpp  ip.h  main.cpp
tests/: CMakeLists.txt  test_ipfilter.cpp
